[fixes and features] fixes alignments; new modal after inactivity

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -16,7 +16,12 @@
     font-family: System-Regular;
     font-weight: regular;
     /* text-indent: 32; */
-    fill: black;
-    x: 100%-30;
+    fill: white;
+    x: 100%-20;
     text-anchor: end;
+    text-length: 32;
+}
+
+#stopButton {
+    display: inline;
 }
